fixing spacing

--- a/front-end/app/global.scss
+++ b/front-end/app/global.scss
@@ -36,7 +36,7 @@
 // removing the border on the left
 .usa-form-group--error {
   border-left-style: none !important;
-  padding-left: 1rem !important;
+  padding-left: 1.2rem !important;
 }
 
 
